Create a unique scope on the stage to add the cutplane objects to

--- a/exts/lm.cutplane.tool/config/extension.toml
+++ b/exts/lm.cutplane.tool/config/extension.toml
@@ -25,6 +25,8 @@ preview_image = ""
 # Use omni.ui to build simple UI
 [dependencies]
 "omni.kit.uiapp" = {}
+"omni.usd" = {}
+"omni.kit.viewport.utility" = {}
 
 # Main python module this extension provides
 [[python.module]]
@@ -33,5 +35,6 @@ name = "lm.cutplane.tool"
 [[test]]
 # Extra dependencies only to be used during test run
 dependencies = [
-    "omni.kit.ui_test" # UI testing extension
+    "omni.kit.ui_test", # UI testing extension
+    "omni.kit.viewport.utility",
 ]
